--- a/python_datasc/manip_numpy.ipynb
+++ b/python_datasc/manip_numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21 22 23 24 25 26 27 28 29 30 31 32]\n"
+     ]
+    }
+   ],
    "source": [
     "matrB = np.arange(21,33)\n",
     "print(matrB)"
@@ -39,11 +55,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "-----------------\n",
+      "[[21 22 23 24]\n",
+      " [25 26 27 28]\n",
+      " [29 30 31 32]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = matrA.reshape(3,4)\n",
     "b = matrB.reshape(3,4)\n",
@@ -52,63 +82,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[22 24 26 28]\n",
+      " [30 32 34 36]\n",
+      " [38 40 42 44]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a + b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20 20 20 20]\n",
+      " [20 20 20 20]\n",
+      " [20 20 20 20]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(b - a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 21  44  69  96]\n",
+      " [125 156 189 224]\n",
+      " [261 300 341 384]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a * b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[21 25 29]\n",
+      " [22 26 30]\n",
+      " [23 27 31]\n",
+      " [24 28 32]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(b.T)  # transposée "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 230  270  310]\n",
+      " [ 590  694  798]\n",
+      " [ 950 1118 1286]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a @ b.T) # produit de matrice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [10 12 14 16]\n",
+      " [18 20 22 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a * 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.arange(1,4).reshape(-1,1)\n",
     "print(c)"
@@ -116,29 +217,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3  4  5]\n",
+      " [ 7  8  9 10]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a + c) # A conserver pour le broadcasting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [10 12 14 16]\n",
+      " [27 30 33 36]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a * c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "d = np.arange(1,5).reshape(1,-1)\n",
     "print(d)"
@@ -146,16 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [ 6  8 10 12]\n",
+      " [10 12 14 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a + d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,31 +303,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [ 6  8 10 12]\n",
+      " [10 12 14 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a + e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  4  9 16]\n",
+      " [ 5 12 21 32]\n",
+      " [ 9 20 33 48]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a * e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 30  70 110]\n",
+      "(3, 4) (4,)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(a @ e)\n",
+    "print(a @ e) ### what ?\n",
     "print(a.shape, e.shape)"
    ]
   },
@@ -201,9 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "78\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)\n",
     "print(a.sum())"
@@ -211,18 +390,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.5\n"
+     ]
+    }
+   ],
    "source": [
     "print(a.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4)\n",
+      "[15 18 21 24]\n",
+      "[10 26 42]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a.shape)\n",
     "print(a.sum(axis = 0)) # colonne\n",
@@ -231,9 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(a.max(), a.min())"
    ]
@@ -247,9 +452,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "----\n",
+      "[5 6 7 8]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)\n",
     "print('----')\n",
@@ -258,9 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[1,2])\n",
     "print(a[1][2])"
@@ -268,18 +494,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  6 10]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[:,1])"
    ]
@@ -293,9 +536,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[5 6 7 8]\n",
+      "[ 9 10 11 12]\n"
+     ]
+    }
+   ],
    "source": [
     "for ligne in a:\n",
     "    print(ligne)"
@@ -303,9 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "for item in a.flat:\n",
     "    print(item)"
@@ -313,27 +585,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  7  8  9 10 11 12]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[a > 5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False False False]\n",
+      " [False  True  True  True]\n",
+      " [ True  True  True  True]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a> 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9 10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[a[:,0]> 5])"
    ]
@@ -347,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +654,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9 10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[plus_grand])"
    ]
@@ -372,18 +678,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8]\n",
+      "[5 6 7 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# une ligne\n",
     "print(a[1])\n",
@@ -392,9 +717,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  7 11]\n"
+     ]
+    }
+   ],
    "source": [
     "# une colonne\n",
     "print(a[:,2])"
@@ -402,9 +735,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# Un element\n",
     "print(a[2,3])"
@@ -412,9 +753,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3]\n",
+      " [7]]\n",
+      "----------------\n",
+      "[[2 3]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Une tranche\n",
     "print(a[:2,2:-1])\n",
