--- a/python_datasc/manip_numpy_shape.ipynb
+++ b/python_datasc/manip_numpy_shape.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 10  1  3]\n",
+      " [ 7  3  9  5]\n",
+      " [ 3  2  5  2]\n",
+      " [ 7  1  4  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "# Matrice aléatoire : entier, flottant , normale ..\n",
@@ -16,18 +25,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "print(matr.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 10  1  3]\n",
+      " [ 7  3  9  5]\n",
+      " [ 3  2  5  2]\n",
+      " [ 7  1  4  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr.reshape(2,8)\n",
     "print(matr)"
@@ -42,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 10  1  3  7  3  9  5]\n",
+      " [ 3  2  5  2  7  1  4  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr2 = matr.reshape(2,8)\n",
     "print(matr2)"
@@ -59,9 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 10  1  3  7  3  9  5]\n",
+      " [ 3  2  5  2  7  1  4  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr3 = np.reshape(matr, (2,8))\n",
     "print(matr3)"
@@ -76,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10 12 14 16 18 20 22 24]\n"
+     ]
+    }
+   ],
    "source": [
     "matr = np.arange(2,26,2)\n",
     "print(matr)"
@@ -86,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12,)\n"
+     ]
+    }
+   ],
    "source": [
     "print(matr.shape)\n"
    ]
@@ -102,9 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [10 12 14 16]\n",
+      " [18 20 22 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr2 = matr.reshape(3,4)\n",
     "print(matr2)"
@@ -119,9 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32 4 12 1\n",
+      "12 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(matr.dtype, matr.itemsize, matr.size,matr.ndim )\n",
     "\n",
@@ -130,11 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(matr))\n",
     "print(len(matr2))"
@@ -149,9 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [10 12 14 16]\n",
+      " [18 20 22 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "matr2 = np.reshape(matr, (3,4))\n",
     "print(matr2)"
@@ -159,9 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [10 12 14 16]\n",
+      " [18 20 22 24]] shape (3, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "# Matrice\n",
     "print(matr2, 'shape', matr2.shape)"
@@ -169,9 +277,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2]\n",
+      " [ 4]\n",
+      " [ 6]\n",
+      " [ 8]\n",
+      " [10]\n",
+      " [12]\n",
+      " [14]\n",
+      " [16]\n",
+      " [18]\n",
+      " [20]\n",
+      " [22]\n",
+      " [24]] shape (12, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# vecteur colonne\n",
     "matr3 = matr2.reshape(-1,1)\n",
@@ -180,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8 10 12 14 16 18 20 22 24]] shape (1, 12)\n"
+     ]
+    }
+   ],
    "source": [
     "# vecteur ligne\n",
     "matr3 = matr2.reshape(1,-1)\n",
@@ -191,11 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10 12 14 16 18 20 22 24] shape (12,)\n"
+     ]
+    }
+   ],
    "source": [
     "#liste\n",
     "print(matr, 'shape', matr.shape)"
