--- a/python_datasc/manip_vues.ipynb
+++ b/python_datasc/manip_vues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# Rappel\n",
     "a = [1, 2, 3, 5]\n",
@@ -24,11 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 36, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "a = [1, 2, 3, 5]\n",
     "b = a[:]\n",
     "b[-1] = 4\n",
     "a[2] = 36\n",
@@ -38,9 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0   1   2 100   4   5   6   7   8   9]\n",
+      "[  0   1   2 100   4   5   6   7   8   9]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ne fonctionne pas de la meme facon\n",
     "a = np.arange(10)\n",
@@ -52,11 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0   1   2   3   4   5   6   7 100   9]\n",
+      "-------------------\n",
+      "[[  0   1   2   3   4]\n",
+      " [  5   6   7 100   9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# essai avec les vues\n",
     "a = np.arange(10)\n",
@@ -76,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "-------------------\n",
+      "[[  0   1   2   3   4]\n",
+      " [  5 421   7   8   9]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.arange(10)\n",
     "b = a.copy().reshape(2,5)\n",
@@ -98,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
